manifests/yaml/steps/00-basic/00_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-db
  labels:
    app: petclinic
    component: petclinic-db
spec:
  replicas: 1
  selector:
    matchLabels:
      component: petclinic-db
  template:
    metadata:
      labels:
        app: petclinic
        component: petclinic-db
    spec:
      containers:
      - name: petclinic-mysql
        image: registry.redhat.io/rhel8/mysql-80@sha256:c9af2fc27bcbd448e7ccafea011bb2d2078d4d8ae8814a75812707b0e4eb9135
        ports:
        - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-web
  labels:
    app: petclinic
    component: petclinic-web
spec:
  replicas: 1
  selector:
    matchLabels:
      component: petclinic-web      
  template:
    metadata:
      labels:
        app: petclinic
        component: petclinic-web
    spec:
      containers:
      - name: petclinic
        image: quay.io/rh-ee-apalma/petclinic:v1
        ports:
        - containerPort: 8080
