manifests/yaml/steps/00-basic/01_services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
    component: petclinic-db
  name: petclinic-db
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    component: petclinic-db
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
    component: petclinic-web
  name: petclinic-web
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    component: petclinic-web
