manifests/yaml/steps/00-basic/02_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:    
    app: petclinic
    component: petclinic-web
  name: petclinic-web  
spec:  
  port:
    targetPort: 8080
  to:
    kind: Service
    name: petclinic-web
